--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
       <div class="offcanvas__logo">
-        <a href="#"><img src="img/logo.png" alt="" /></a>
+        <a href="/index.html"><img src="img/logo.png" alt="" /></a>
       </div>
       <div id="mobile-menu-wrap"></div>
       <div class="offcanvas__widget">
@@ -457,7 +457,11 @@
                 class="video-classic-link d-flex align-items-center justify-content-center"
                 href="#!"
               >
-                <img class="w-2" src="./img/video-play.png" />
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                  <path
+                    d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  />
+                </svg>
               </a>
             </article>
 
@@ -533,7 +537,7 @@
       </div>
       <div class="layer-wrap layer-2">
         <div class="layer" data-depth="0.4">
-          <img src="img/index-8-853x574.png" alt="" width="853" height="574" />
+          <img src="img/Avatar8.jpg" alt="" width="853" height="574" />
         </div>
       </div>
     </section>
@@ -557,8 +561,7 @@
                 data-setbg="img/project/project-1.jpg"
               >
                 <div class="project__slider__item__hover">
-                  <span>interiors</span>
-                  <h5>Lower River Street Astoria</h5>
+                  <img src="./img/arrow-right-up-icon.svg" />
                 </div>
               </div>
             </div>
@@ -568,8 +571,7 @@
                 data-setbg="img/project/project-2.jpg"
               >
                 <div class="project__slider__item__hover">
-                  <span>interiors</span>
-                  <h5>Lower River Street Astoria</h5>
+                  <img src="./img/arrow-right-up-icon.svg" />
                 </div>
               </div>
             </div>
@@ -579,8 +581,7 @@
                 data-setbg="img/project/project-3.jpg"
               >
                 <div class="project__slider__item__hover">
-                  <span>interiors</span>
-                  <h5>Lower River Street Astoria</h5>
+                  <img src="./img/arrow-right-up-icon.svg" />
                 </div>
               </div>
             </div>
@@ -590,8 +591,7 @@
                 data-setbg="img/project/project-4.jpg"
               >
                 <div class="project__slider__item__hover">
-                  <span>interiors</span>
-                  <h5>Lower River Street Astoria</h5>
+                  <img src="./img/arrow-right-up-icon.svg" />
                 </div>
               </div>
             </div>
@@ -601,8 +601,7 @@
                 data-setbg="img/project/project-2.jpg"
               >
                 <div class="project__slider__item__hover">
-                  <span>interiors</span>
-                  <h5>Lower River Street Astoria</h5>
+                  <img src="./img/arrow-right-up-icon.svg" />
                 </div>
               </div>
             </div>
@@ -865,91 +864,6 @@
     </section>
     <!-- Testimonial Section End -->
 
-    <!-- Team Section Begin -->
-    <section class="team spad">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 col-md-8 col-sm-6">
-            <div class="section-title">
-              <span>Our Team</span>
-              <h2>Meet our team</h2>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6">
-            <div class="team__btn">
-              <a href="#" class="primary-btn normal-btn">View All</a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
-              <div class="team__text">
-                <div class="team__title">
-                  <h5>Dolores Webster</h5>
-                  <span>CEO & Founder</span>
-                </div>
-                <p>
-                  Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies
-                  consectetur. Ut viverra porta leo, non tincidunt mauris
-                  condimentum eget. Vivamus non turpis elit. Aenean ultricies
-                  nisl sit amet.
-                </p>
-                <div class="team__social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="team__item set-bg" data-setbg="img/team/team-2.jpg">
-              <div class="team__text">
-                <div class="team__title">
-                  <h5>Dana Vaughn</h5>
-                  <span>Architect</span>
-                </div>
-                <p>
-                  Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies
-                  consectetur. Ut viverra porta leo, non tincidunt mauris
-                  condimentum eget. Vivamus non turpis elit. Aenean ultricies
-                  nisl sit amet.
-                </p>
-                <div class="team__social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="team__item set-bg" data-setbg="img/team/team-3.jpg">
-              <div class="team__text">
-                <div class="team__title">
-                  <h5>Jonathan Mcdaniel</h5>
-                  <span>Architect</span>
-                </div>
-                <p>
-                  Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies
-                  consectetur. Ut viverra porta leo, non tincidunt mauris
-                  condimentum eget. Vivamus non turpis elit. Aenean ultricies
-                  nisl sit amet.
-                </p>
-                <div class="team__social">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Team Section End -->
-
     <!-- Call To Action Section Begin -->
     <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
       <div class="container">
@@ -961,7 +875,7 @@
                 Our Ability To Deliver Outstanding Results For Our Clients
                 Starts With Our Team Of Smart.
               </h2>
-              <a href="#" class="primary-btn">Contact Us</a>
+              <a href="#" download="" class="primary-btn">See Why</a>
             </div>
           </div>
         </div>
@@ -981,11 +895,54 @@
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="latest__btn">
-              <a href="#" class="primary-btn normal-btn">View All</a>
+              <a href="/videos.html" class="primary-btn normal-btn">View All</a>
             </div>
           </div>
         </div>
         <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="latest__item">
+              <div class="latest__item__pic">
+                <img src="img/blog/latest-1.jpg" alt="" />
+              </div>
+              <div class="latest__item__text">
+                <span>Architecture</span>
+                <h4>Target and Amazon Shopping List for Home Stagers</h4>
+                <a href="#">Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="latest__item">
+              <div class="latest__item__pic">
+                <img src="img/blog/latest-2.jpg" alt="" />
+              </div>
+              <div class="latest__item__text">
+                <span>Interior</span>
+                <h4>
+                  6 Ideas for Team Building and Employee Appreciation for Home
+                  Stagers
+                </h4>
+                <a href="#">Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="latest__item">
+              <div class="latest__item__pic">
+                <img src="img/blog/latest-3.jpg" alt="" />
+              </div>
+              <div class="latest__item__text">
+                <span>Planning</span>
+                <h4>
+                  How to Find the Best Price Structure for Your Home Staging
+                  Services
+                </h4>
+                <a href="#">Read more</a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="latest__item">
               <div class="latest__item__pic">
