--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <body>
     <!-- Page Preloader -->
-    <div id="preloder">
+    <!-- <div id="preloder">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
@@ -93,7 +93,7 @@
           />
         </g>
       </svg>
-    </div>
+    </div> -->
 
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
@@ -542,14 +542,14 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-xl-3 inset-xl-top-70">
+          <div class="col-md-4 col-xl-4 inset-xl-top-70">
             <div
               class="row row-30 row-md-50 justify-content-center justify-content-md-start"
             >
               <div class="col-12 col-sm-12 col-md-12 col-lg-11 wow fadeInRight">
                 <article class="counter-classic">
                   <div class="counter-classic-header">
-                    <div class="heading-1 counter-classic-number">
+                    <div class="heading-2 counter-classic-number">
                       <span class="counter">1°</span>
                     </div>
                     <h6 class="counter-classic-title">Passo</h6>
@@ -567,7 +567,7 @@
               >
                 <article class="counter-classic">
                   <div class="counter-classic-header">
-                    <div class="heading-1 counter-classic-number">
+                    <div class="heading-2 counter-classic-number">
                       <span class="counter">2°</span>
                     </div>
                     <h6 class="counter-classic-title">Passo</h6>
@@ -585,16 +585,15 @@
               >
                 <article class="counter-classic">
                   <div class="counter-classic-header">
-                    <div class="heading-1 counter-classic-number">
+                    <div class="heading-2 counter-classic-number">
                       <span class="counter">3°</span>
                     </div>
                     <h6 class="counter-classic-title">Passo</h6>
                   </div>
                   <div class="counter-classic-text">
-                    Em seguida, começamos a trabalhar em seu projeto
-                    personalizado. Primeiro, criamos um anteprojeto, que inclui
-                    opções de cores, móveis e decoração. Depois de finalizado,
-                    gravamos um vídeo 3D que explica e mostra as ideias
+                    Em seguida, iniciamos seu projeto personalizado. Criamos um
+                    anteprojeto com opções de cores, móveis e decoração.
+                    Finalizado, enviamos um vídeo 3D detalhando as ideias
                     propostas para o seu espaço.
                   </div>
                 </article>
@@ -605,16 +604,15 @@
               >
                 <article class="counter-classic">
                   <div class="counter-classic-header">
-                    <div class="heading-1 counter-classic-number">
+                    <div class="heading-2 counter-classic-number">
                       <span class="counter">4°</span>
                     </div>
                     <h6 class="counter-classic-title">Bônus</h6>
                   </div>
                   <div class="counter-classic-text">
-                    E aqui está a melhor parte: uma rodada ilimitada de ajustes
-                    sem custo adicional! Enviamos um formulário para preencher
-                    com todas as suas solicitações de ajustes, e nosso designer
-                    fará todas as alterações necessárias.
+                    E o melhor: ajustes ilimitados sem custo adicional! Basta
+                    preencher o formulário com suas solicitações, e nosso
+                    designer fará todas as alterações necessárias.
                   </div>
                 </article>
               </div>
@@ -746,7 +744,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="services__item">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path
@@ -754,10 +752,13 @@
                 />
               </svg>
               <h4>Transforme Seu Espaço</h4>
-              <p>Veja como ficará seu ambiente em 3D.</p>
+              <p>
+                Veja seu ambiente em 3D e visualize cada detalhe espaço. Tenha
+                confiança no resultado antes mesmo de começar!
+              </p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="services__item">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path
@@ -765,10 +766,13 @@
                 />
               </svg>
               <h4>Ajustes Ilimitados</h4>
-              <p>Tenha uma rodada de ajustes ilimitados.</p>
+              <p>
+                Aproveite ajustes ilimitados para garantir que seu projeto fique
+                exatamente como você deseja.
+              </p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="services__item">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path
@@ -776,10 +780,13 @@
                 />
               </svg>
               <h4>Receba a Lista Completa</h4>
-              <p>Lista de todos os itens utilizados no projeto.</p>
+              <p>
+                Receba a lista completa de todos os itens utilizados no seu
+                projeto para total controle.
+              </p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="services__item">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path
@@ -787,10 +794,13 @@
                 />
               </svg>
               <h4>Detalhado e Pronto</h4>
-              <p>Detalhamentos em PDF de tudo que você precisa!</p>
+              <p>
+                Tenha todos os detalhamentos do seu projeto organizados em um
+                PDF completo e fácil de acessar.
+              </p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="services__item">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path
@@ -798,7 +808,25 @@
                 />
               </svg>
               <h4>Converse Ao Vivo</h4>
-              <p>Reunião de vídeo com nossos especialistas em interiores.</p>
+              <p>
+                Agende uma reunião de vídeo com nossos especialistas em
+                interiores e transforme suas ideias em realidade!
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="services__item">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path
+                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
+                />
+              </svg>
+              <h4>Consultoria Personalizada</h4>
+              <p>
+                Conecte-se com nossos especialistas e receba sugestões
+                exclusivas para aprimorar seu projeto. Tenha soluções criativas
+                alinhadas ao seu estilo!
+              </p>
             </div>
           </div>
         </div>
@@ -1050,8 +1078,8 @@
         <div class="row">
           <div class="col-lg-9 col-md-8 col-sm-6">
             <div class="section-title">
-              <span>Últimas notícias</span>
-              <h2>Do nosso canal</h2>
+              <span>Confira os nossos</span>
+              <h2>Projetos</h2>
             </div>
           </div>
         </div>
@@ -1323,10 +1351,10 @@
             </div>
           </div>
         </div>
-        <div class="project__slider owl-carousel">
+        <div class="videos__slider owl-carousel">
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/gd8aRexwjGk/hqdefault.jpg"
             >
               <a
@@ -1348,7 +1376,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/-1okj855MYI/hqdefault.jpg"
             >
               <a
@@ -1370,7 +1398,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/MaDHYisDL-w/hqdefault.jpg"
             >
               <a
@@ -1392,7 +1420,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/53yqxVW2iVw/hqdefault.jpg"
             >
               <a
@@ -1414,7 +1442,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/tFu8V0V2Ny0/hqdefault.jpg"
             >
               <a
@@ -1436,7 +1464,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/93A1PPruCTQ/hqdefault.jpg"
             >
               <a
@@ -1458,7 +1486,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/UZ_RHkXvY78/hqdefault.jpg"
             >
               <a
@@ -1480,7 +1508,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/1beUpqkTlrY/hqdefault.jpg"
             >
               <a
@@ -1502,7 +1530,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/hjGWkeDkoJA/hqdefault.jpg"
             >
               <a
@@ -1524,7 +1552,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/yneDkOQymOY/hqdefault.jpg"
             >
               <a
@@ -1546,7 +1574,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/6dx7wD7iYwc/hqdefault.jpg"
             >
               <a
@@ -1568,7 +1596,7 @@
           </div>
           <div class="col-lg-3">
             <div
-              class="project__slider__item set-bg"
+              class="videos__slider__item set-bg"
               data-setbg="https://img.youtube.com/vi/7uYCz7gpjrc/hqdefault.jpg"
             >
               <a
