--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-xl-4 inset-xl-top-70">
+          <div class="col-md-4 col-xl-6 inset-xl-top-70 wrap">
             <div
-              class="row row-30 row-md-50 justify-content-center justify-content-md-start"
+              class="row row-30 row-md-50 justify-content-center justify-content-md-end"
             >
               <div class="col-12 col-sm-12 col-md-12 col-lg-11 wow fadeInRight">
                 <article class="counter-classic">
@@ -616,7 +616,7 @@
                   </div>
                 </article>
               </div>
-              <div class="col-xl-12 wow fadeInUp">
+              <div class="col-xl-12 wow fadeInUp d-flex align-items-center justify-content-center">
                 <a
                   class="button button-jerry button-primary"
                   href="./ebook/descobrindo-seu-estilo-de-decoração.pdf"
