--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <body>
   <!-- Page Preloader -->
-  <!-- <div id="preloder">
+   <div id="preloder">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
@@ -86,7 +86,7 @@
           />
         </g>
       </svg>
-    </div> -->
+    </div>
 
   <!-- Offcanvas Menu Begin -->
   <div class="offcanvas-menu-overlay"></div>
