--- a/index.html
+++ b/index.html
@@ -12,31 +12,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-
   <!-- Open Graph -->
-  <meta property="og:image" content="https://lp.pameladecoracao.com.br/img/android-chrome-512x512.png" />
-  <meta property="og:url" content="https://lp.pameladecoracao.com.br/" />
+  <meta property="og:image" content="https://guato-digital.github.io/lp-pamela/img/android-chrome-512x512.png" />
+  <meta property="og:url" content="https://guato-digital.github.io/lp-pamela/" />
   <meta property="og:site_name" content="Marina Cintra" />
   <meta property="og:description" content="Pâmela Decoração - Referência Nacional em interiores" />
   <meta property="og:title" content="Pâmela Decoração - Referência Nacional em interiores" />
 
   <!-- Twitter -->
   <meta name="twitter:title" content="Pâmela Decoração - Referência Nacional em interiores" />
-  <meta name="twitter:image" content="https://lp.pameladecoracao.com.br/image/android-chrome-512x512.png" />
-  <meta name="twitter:url" content="https://lp.pameladecoracao.com.br/" />
+  <meta name="twitter:image" content="https://guato-digital.github.io/lp-pamela/img/android-chrome-512x512.png" />
+  <meta name="twitter:url" content="https://guato-digital.github.io/lp-pamela/" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicon Links -->
   <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="./img/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="./img/android-chrome-512x512.png">
-
-
-
-  <link rel="apple-touch-icon" href="./img/apple-touch-icon.png" />
 
   <link rel="manifest" href="./site.webmanifest" />
   <title>Pâmela Decoração - Referência Nacional em interiores</title>
