--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
           <div id="teamCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="carousel-image" src="img/time1.png" alt="Equipe de cinco pessoas" />
+                <img class="carousel-image" src="img/time3.png" alt="Equipe discutindo em uma reunião" />
               </div>
               <div class="carousel-item">
                 <img class="carousel-image" src="img/time2.png" alt="Equipe em um projeto" />
               </div>
               <div class="carousel-item">
-                <img class="carousel-image" src="img/time3.png" alt="Equipe discutindo em uma reunião" />
+                <img class="carousel-image" src="img/time1.png" alt="Equipe de cinco pessoas" />
               </div>
             </div>
             <a class="carousel-control-prev" href="#teamCarousel" role="button" data-slide="prev">
@@ -648,10 +648,11 @@
               <path
                 d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z" />
             </svg>
-            <h4>Consultoria Exclusiva</h4>
+            <h4>Consultoria e Suporte Exclusivo</h4>
             <p>
-              Receba sugestões personalizadas para elevar o nível do seu projeto, com soluções inovadoras e alinhadas ao
-              seu estilo.
+              Receba sugestões personalizadas para elevar o nível do seu projeto, com soluções alinhadas ao
+              seu estilo. Oferecemos suporte via WhatsApp durante a excecução do projeto,
+              garntindo que tudo saia como o planejado.
             </p>
           </div>
         </div>
