--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
             </svg>
             <h4>Consultoria e Suporte Exclusivo</h4>
             <p>
-              Receba sugestões personalizadas para elevar o nível do seu projeto, com soluções alinhadas ao
-              seu estilo. Oferecemos suporte via WhatsApp durante a excecução do projeto,
-              garntindo que tudo saia como o planejado.
+              Receba sugestões personalizadas para elevar o nível do seu projet.
+              Oferecemos suporte via WhatsApp durante a excecução do projeto,
+              garantindo que tudo saia como o planejado.
             </p>
           </div>
         </div>
