--- a/index.html
+++ b/index.html
@@ -650,8 +650,7 @@
             </svg>
             <h4>Consultoria e Suporte Exclusivo</h4>
             <p>
-              Receba sugestões personalizadas para elevar o nível do seu projet.
-              Oferecemos suporte via WhatsApp durante a excecução do projeto,
+              Oferecemos consultoria e suporte exclusivo via WhatsApp durante a excecução do projeto,
               garantindo que tudo saia como o planejado.
             </p>
           </div>
